--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "antd": "^5.27.0",
+    "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "html-react-parser": "^5.2.6",
+    "millify": "^6.1.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
